--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "puppeteer": "^24.3.0",
     "youtube-dl-exec": "^3.0.16"
   }
 }
